# DataStructures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/linked_list/: singly_linked_list.c  singly_linked_list_1.c  singly_linked_list_2.c
examples/stack/: example_1.c  example_2.c
include/linked_list/: singly_linked_list.h
include/stack/: stack.h
include/utils/: common.h  errors.h  types.h
src/linked_list/: singly_linked_list.c
src/stack/: stack.c
src/utils/: common.c
